Following issues resolved on 23 Dec 2025 1. RAD-6491: Incorrect time duration is displayed for checklist items 2. RAD-6644: Android[QA]>Checklist>MR+ER>What time do you usually go to bed and wake up screen>Continue button is cut off at the bottom on “Sleep Time” screen in MR+ER checklist 3. RAD-6496: Support email ID is not accessible or clickable on Support screen 4. RAD-6646: [android][QA][PURCHASE]Continue button navigates to Play Store payment without selecting a payment method on Booster Pack purchase screen 5. RAD-6646: [android][QA][PURCHASE]Continue button navigates to Play Store payment without selecting a payment method on Booster Pack purchase screen 6. RAD-6528: Android[QA] > Purchase Plans > Booster Plan > Buy button shape is not as per design 7. RAD-6049: [Android][Production][checklist]Incorrect progress count displayed on Discover Your Eating Habits & Movement Style checklist screens 8. RAD-6240: Android[Prod]>Checklist>facescan>Warning Message Font Color Below Camera Not Matching Design 9. RAD-6624: Android[QA][Profile] Last Name field > Random last name populated without user input 10. RAD-5238: [Android][QA][mindaudit]red flag alert-Call icon redirects to blank phone dialer for Australia on Red Flag Alert screen 11. RAD-5963: Android[prod[1.1.13]]>Checklist>Unlock your sleep & mind insights>'What time do you usually go to bed and wakeup' question is not fixed on top 12. RAD-6586: Incorrect duration format on affirmation completion popup

--- a/app/src/main/res/layout/fragment_bed_wakeup_time.xml
+++ b/app/src/main/res/layout/fragment_bed_wakeup_time.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvQuestion"
@@ -27,89 +27,87 @@
             android:id="@+id/tvBedtimeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bedtime:"
-            android:textSize="16sp"
-            android:textColor="#000000"
             android:layout_marginBottom="8dp"
-            android:fontFamily="@font/dmsans_regular"
+            android:drawableStart="@drawable/ic_sleep_bad"
             android:drawablePadding="@dimen/margin_card_16dp"
-            android:drawableStart="@drawable/ic_sleep_bad"/>
+            android:fontFamily="@font/dmsans_regular"
+            android:text="Bedtime:"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <!-- Bedtime TimePicker -->
         <TimePicker
             android:id="@+id/timePickerBedtime"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:timePickerMode="spinner"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="8dp"
             android:theme="@style/TimePickerTheme"
-            android:layout_gravity="center" />
+            android:timePickerMode="spinner" />
 
         <!-- Wake Time Label -->
         <TextView
             android:id="@+id/tvWakeTimeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wake Time:"
-            android:fontFamily="@font/dmsans_regular"
-            android:textSize="16sp"
-            android:textColor="#000000"
-            android:drawablePadding="@dimen/margin_card_16dp"
+            android:layout_marginBottom="8dp"
             android:drawableStart="@drawable/ic_sleep_clock"
-            android:layout_marginBottom="8dp"/>
+            android:drawablePadding="@dimen/margin_card_16dp"
+            android:fontFamily="@font/dmsans_regular"
+            android:text="Wake Time:"
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <!-- Wake Time TimePicker -->
         <TimePicker
             android:id="@+id/timePickerWakeTime"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:timePickerMode="spinner"
-            android:theme="@style/TimePickerTheme"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="8dp"
-            android:layout_gravity="center"/>
-
-        <!-- Sleep Duration -->
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tvSleepDuration_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sleep duration: "
-                android:textSize="16sp"
-                android:textColor="#000000"
-                android:fontFamily="@font/dmsans_regular"
-                />
-            <TextView
-                android:id="@+id/tvSleepDuration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="9 hrs 30 mins"
-                android:textSize="16sp"
-                android:textColor="#1292E5"
-                android:fontFamily="@font/dmsans_bold"
-                />
-        </LinearLayout>
-
-
-        <!-- Continue Button -->
-        <Button
-            android:id="@+id/btn_continue"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/menuselected"
-            android:fontFamily="@font/dmsans_bold"
-            android:text="@string/str_continue"
-            android:textColor="@color/white"
-            android:textSize="@dimen/textsize_large18sp"
-            android:layout_alignParentBottom="true" />
+            android:theme="@style/TimePickerTheme"
+            android:timePickerMode="spinner" />
 
     </LinearLayout>
-</LinearLayout>
+
+    <!-- Sleep Duration -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_above="@id/btn_continue">
+
+        <TextView
+            android:id="@+id/tvSleepDuration_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dmsans_regular"
+            android:text="Sleep duration: "
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tvSleepDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dmsans_bold"
+            android:text="9 hrs 30 mins"
+            android:textColor="#1292E5"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <!-- Continue Button -->
+    <Button
+        android:id="@+id/btn_continue"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="36dp"
+        android:backgroundTint="@color/menuselected"
+        android:fontFamily="@font/dmsans_bold"
+        android:text="@string/str_continue"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textsize_large18sp" />
+</RelativeLayout>
