--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -61,6 +61,7 @@
         android:fontFamily="@font/dmsans_regular"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/tvSupportEmail"
         android:layout_width="wrap_content"
         android:text="support@rightlife.com"
         android:textColor="#707070"
