move_right_commit_api_implementation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
 
     <color name="border">#DDDDDD</color>
     <color name="menuselected">#FD6967</color>
+    <color name="new_background">#FFECEB</color>
 
 
     <color name="buttoncolorvc">#E5B62D</color>
