--- a/app/src/main/res/layout/bottomsheet_switch_account.xml
+++ b/app/src/main/res/layout/bottomsheet_switch_account.xml
@@ -63,7 +63,7 @@
         android:text="Yes"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/black"
+        android:textColor="@color/menuselected"
         android:backgroundTint="@color/color_bg_button_affirmed"/>
 
 </LinearLayout>
