--- a/app/src/main/res/layout/fragment_meal_summary_info_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_meal_summary_info_bottom_sheet.xml
@@ -48,7 +48,8 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
-            android:padding="24dp"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
