New Feature- Challenge - Challenge Info Page Design - Added challenge info page into bottom sheet dialog - Register challenge card design - API implementation for register challenge card for getting data from backend - API implementation for join the challenge - Unlock challenge card design - binding data to unlock card from API response - New Flaoting Loader class added to show the Loader for background tasks. - AppConfig API changes as per new parameter added "isChallengeStart" for the Challenge. - Added AppConfig SharedPreference Name in not to clear to avoid the crash

--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -230,6 +230,14 @@
                     android:background="#F7F7F7"
                     android:orientation="vertical">
 
+                    <include
+                        android:id="@+id/layoutRegisterChallenge"
+                        layout="@layout/layout_register_challenge" />
+
+                    <include
+                        android:id="@+id/layoutUnlockChallenge"
+                        layout="@layout/layout_unlock_challenge" />
+
                     <FrameLayout
                         android:id="@+id/rightLifeReportCard"
                         android:layout_width="match_parent"
@@ -393,11 +401,12 @@
                             </LinearLayout>
                         </LinearLayout>
                     </FrameLayout>
-                    <!-- Fragment Container -->
+
                     <include
                         android:id="@id/trialExpiredLayout"
                         layout="@layout/layout_subscription_dashboard" />
 
+                    <!-- Fragment Container -->
                     <FrameLayout
                         android:id="@+id/fragmentContainer"
                         android:layout_width="match_parent"
