--- a/app/src/main/res/layout/layout_unlock_challenge.xml
+++ b/app/src/main/res/layout/layout_unlock_challenge.xml
@@ -6,7 +6,7 @@
     android:layout_height="260dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <com.jetsynthesys.rightlife.ai_package.ui.eatright.fragment.AnimatedGlowGradientBorderView
         android:id="@+id/gradientBorder"
