--- a/app/src/main/res/layout/layout_challenge_daily_score.xml
+++ b/app/src/main/res/layout/layout_challenge_daily_score.xml
@@ -59,7 +59,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvCountDownDays"
+                android:id="@+id/tvPoints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -166,6 +166,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tvMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
