--- a/app/src/main/res/drawable/bg_grand_tag.xml
+++ b/app/src/main/res/drawable/bg_grand_tag.xml
@@ -1,4 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FDA871" />
-    <corners android:radius="10dp" />
+    <corners
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="20dp" />
 </shape>
