--- a/app/src/main/res/layout/item_final_prize.xml
+++ b/app/src/main/res/layout/item_final_prize.xml
@@ -1,5 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+    android:layout_width="170dp"
     android:layout_height="180dp">
 
     <!-- Card -->
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:fontFamily="@font/dmsans_bold"
             android:text="₹30,000"
             android:textColor="@color/txt_color_header"
@@ -38,9 +38,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Challenge Winner"
-            android:textColor="#777"
-            android:textSize="12sp" />
+            android:fontFamily="@font/dmsans_regular"
+            android:gravity="center"
+            android:text="Split Across\nContest Winners"
+            android:textColor="@color/txt_color_header"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <!-- GRAND Tag -->
