--- a/app/src/main/res/layout/layout_share_challenge.xml
+++ b/app/src/main/res/layout/layout_share_challenge.xml
@@ -45,7 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/info_challenge" />
+                android:src="@drawable/info_challenge"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
