--- a/app/src/main/res/layout/fragment_dish.xml
+++ b/app/src/main/res/layout/fragment_dish.xml
@@ -225,7 +225,7 @@
 
                             <EditText
                                 android:id="@+id/quantityEdit"
-                                android:layout_width="match_parent"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:textSize="18sp"
                                 android:background="@null"
@@ -299,7 +299,7 @@
 
                             <Spinner
                                 android:id="@+id/spinner"
-                                android:layout_width="wrap_content"
+                                android:layout_width="120dp"
                                 android:layout_height="20dp"
                                 android:textSize="14sp"
                                 android:textStyle="bold"
